alignment bugs

--- a/src/app/pages/candidate/job-listing/job-listing.component.scss
+++ b/src/app/pages/candidate/job-listing/job-listing.component.scss
@@ -42,7 +42,7 @@
   .dash {
     display: flex;
     align-items: baseline;
-    //  align-items: center;
+    // align-items: center;
     // padding-top: 15px;
     padding: 15px 0px 0px 18px;
     .view {
@@ -783,7 +783,7 @@
       align-items: center;
       // justify-content: space-between;
       border-bottom: 1px solid #d0d0d0;
-      padding: 10px 15px 25px 15px;
+      padding: 12px 15px 25px 15px;
 
       .minicard-heading {
         // size: 12px;
@@ -890,7 +890,7 @@
     /* Set the desired font size */
     /* Add any other styles you want */
   }
-  
+
 }
 
 .grid_1 {
